--- a/index.html
+++ b/index.html
@@ -5,7 +5,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
   <body>
-    <h1>Hello, world</h1>
+    <header>
+      <nav>
+        <a href="./index.html">Product</a>
+
+      <ul>
+        <li><a href="">Product</a></li>
+        <li><a href="">Pricing</a></li>
+        <li><a href="">Customers</a></li>
+        <li><a href="">Resources</a></li>
+      </ul>
+      </nav>
+      <ul>
+        <li><button type="button">Sign In</button>
+          <button type="button">Sign Up</button></li>
+      </ul>
+    </header>
+
+    <main>
+    <section>
+    <h1>Work at the speed
+      of thought</h1>
+      <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+    <img src="./images/hero-img.jpg" alt="People are interacting via smartphones and app" width="610" />
+    </section>
+
+   </section>
+   <h2>Product  was Built Specifically for You</h2>
+    <ul>
+      <li>
+      <img src="./images/icon-1.jpg" alt="Green clicking icon" width="54px">
+      <h3>First click tests</h3>
+      <p>While most people enjoy casino gambling,</p>
+      </li>
+      <li>
+        <img src="./images/icon-2.jpg" alt="Blue survey icon" width="54px">
+        <h3>Design surveys</h3>
+        <p>Sports betting, lottery and bingo playing for the fun</p>
+        </li>
+        <li>
+          <img src="./images/icon-3.jpg" alt="Preference purple icon" width="54px">
+          <h3>Preference tests</h3>
+          <p>The Myspace page defines the individual.</p>
+          </li> 
+          <li>
+            <img src="./images/icon-4.jpg" alt="Red testing icon icon" width="54px">
+            <h3>Five second tests</h3>
+            <p>Personal choices and the overall personality of the person.</p>
+            </li> 
+     </ul>
+     <button type="button">SIGN UP NOW</button>
+
+     <section>
+      <h2>Effortless Validation for Management</h2>
+      <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
+      <ul>
+        <li><h3>Accessory makers</h3>
+        <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+        </li>
+       <li><h3>Alterationists</h3>
+        <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+      </li>
+      </ul>
+      <img src="./images/management-img.jpg" alt="Well-managed folders " width="540" />
+     </section>
+
+     <section>
+     <img src="./images/support-img.jpg" alt="Search tab on a laptop" width="540" />
+     <h2>Easier decision making for Customer Support</h2>
+     <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
+     <ul>
+      <li><img src="./images/icon-yellow.jpg" alt="Yellow check icon" width="35.07"/>
+      <p>Never worry about overpaying for your energy again.</p>
+      </li>
+      <li><img src="./images/icon-red.jpg" alt="Red check icon" width="35.07"/>
+      <p>We will only switch you to energy companies that we trust and will treat you right</p>
+      </li>
+      <li><img src="./images/icon-blue.jpg" alt="Blue check icon" width="35.07"/>
+        <p>We track the markets daily and know where the savings are.</p></li>
+     </ul>
+
+     </section>
+
+
+
+  </main>
   </body>
 </html>
