--- a/index.html
+++ b/index.html
@@ -3,90 +3,134 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Business promotion</title>
   </head>
 
   <body>
     <header>
-      <nav>
-        <a href="./index.html">Product</a>
-
+        <a href="./index.html">
+          <img src="./images/logo.svg" alt="logo" width="40" height="36">
+        </a>
+        <nav>
       <ul>
-        <li><a href="">Product</a></li>
-        <li><a href="">Pricing</a></li>
-        <li><a href="">Customers</a></li>
+        <li><a href="./index.html">Product</a></li>
+        <li><a href="./pricing.html">Pricing</a></li>
+        <li><a href="./customer.html">Customers</a></li>
         <li><a href="">Resources</a></li>
       </ul>
       </nav>
       <ul>
-        <li><button type="button">Sign In</button>
-          <button type="button">Sign Up</button></li>
+        <li><button type="button">Sign In</button></li>
+        <li><button type="button">Sign Up</button></li>
       </ul>
     </header>
 
     <main>
+      <!-- HERO SECTION -->
     <section>
     <h1>Work at the speed
       of thought</h1>
       <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
-    <img src="./images/hero-img.jpg" alt="People are interacting via smartphones and app" width="610" />
+      <ul>
+        <li><button type="button">Get started</button></li>
+        <li><button type="button">Watch the Video</button></li>
+      </ul>
+    <img src="./images/hero-img.svg" alt="People are interacting via smartphones and app" width="610" >
     </section>
 
-   </section>
+   <section>
    <h2>Product  was Built Specifically for You</h2>
     <ul>
       <li>
-      <img src="./images/icon-1.jpg" alt="Green clicking icon" width="54px">
+      <img src="./images/icon-1.svg" alt="Green clicking icon" width="54px">
       <h3>First click tests</h3>
       <p>While most people enjoy casino gambling,</p>
       </li>
       <li>
-        <img src="./images/icon-2.jpg" alt="Blue survey icon" width="54px">
+        <img src="./images/icon-2.svg" alt="Blue survey icon" width="54px">
         <h3>Design surveys</h3>
         <p>Sports betting, lottery and bingo playing for the fun</p>
         </li>
         <li>
-          <img src="./images/icon-3.jpg" alt="Preference purple icon" width="54px">
+          <img src="./images/icon-3.svg" alt="Preference purple icon" width="54px">
           <h3>Preference tests</h3>
           <p>The Myspace page defines the individual.</p>
           </li> 
           <li>
-            <img src="./images/icon-4.jpg" alt="Red testing icon icon" width="54px">
+            <img src="./images/icon-4.svg" alt="Red testing icon icon" width="54px">
             <h3>Five second tests</h3>
             <p>Personal choices and the overall personality of the person.</p>
             </li> 
      </ul>
-     <button type="button">SIGN UP NOW</button>
-
-     <section>
-      <h2>Effortless Validation for Management</h2>
-      <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
-      <ul>
-        <li><h3>Accessory makers</h3>
-        <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
-        </li>
-       <li><h3>Alterationists</h3>
-        <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
-      </li>
-      </ul>
-      <img src="./images/management-img.jpg" alt="Well-managed folders " width="540" />
+     <button type="button">sign up now</button>
      </section>
 
      <section>
-     <img src="./images/support-img.jpg" alt="Search tab on a laptop" width="540" />
-     <h2>Easier decision making for Customer Support</h2>
+      <h2>Services</h2>
+      <ul>
+      <li><p>Effortless Validation for</p><h3>Management</h3> 
+      <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
+      <ul>
+        <li><h4>Accessory makers</h4>
+        <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+        </li>
+       <li><h4>Alterationists</h4>
+        <p>If you are looking for a new way to promote your business that won't cost you more money, </p>
+      </li>
+      </ul>
+  
+      <img src="./images/management-img.svg" alt="Well-managed folders " width="540" >
+      </li>
+     
+
+     
+     <li>
+      <img src="./images/support-img.svg" alt="Search tab on a laptop" width="540" >
+     <p>Easier decision making for</p><h3>Customer Support</h3>
      <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
      <ul>
-      <li><img src="./images/icon-yellow.jpg" alt="Yellow check icon" width="35.07"/>
+      <li><img src="./images/yellow.svg" alt="Yellow check icon" width="35.07">
       <p>Never worry about overpaying for your energy again.</p>
       </li>
-      <li><img src="./images/icon-red.jpg" alt="Red check icon" width="35.07"/>
+      <li><img src="./images/red.svg" alt="Red check icon" width="35.07">
       <p>We will only switch you to energy companies that we trust and will treat you right</p>
       </li>
-      <li><img src="./images/icon-blue.jpg" alt="Blue check icon" width="35.07"/>
+      <li><img src="./images/blue.svg" alt="Blue check icon" width="35.07">
         <p>We track the markets daily and know where the savings are.</p></li>
      </ul>
+    </li>
 
+    <li>
+      <p>Optimisation for</p><h3>Collaborative</h3>
+      <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. </p>
+      <ul>
+        <li><h4>Accessory makers</h4>
+        <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p></li>
+        <li><h4>Alterationists</h4>
+        <p>If you are looking for a new way to promote your business that won't cost you more money, </p></li>
+      </ul>
+      <img src="./images/collaboration-img.svg" alt="Some folders " width="540" >
+
+    </li>
+    </ul>
+     </section>
+
+     <section>
+      <h3>Quick & Easy Process</h3>
+      <p>Do you require some help for your project: Conception workshop,
+        prototyping, marketing strategy, landing page, Ux/UI?</p>
+      <ul>
+        <li><img src="./images/avatar1.png" alt="Blonde woman" width="98">
+        <p>I can take care of your pitch</p></li>
+       <li>
+        <img src="" alt="">
+        <p></p>
+       </li>
+       <li>
+        <img src="" alt="">
+        <p></p>
+       </li>
+      </ul>
      </section>
 
 
