--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
 
   <body>
     <header>
-        <a href="./index.html">
-          <img src="./images/logo.svg" alt="logo" width="40" height="36">
-        </a>
-        <nav>
-      <ul>
-        <li><a href="./index.html">Product</a></li>
-        <li><a href="./pricing.html">Pricing</a></li>
-        <li><a href="./customer.html">Customers</a></li>
-        <li><a href="">Resources</a></li>
-      </ul>
+      <a href="./index.html">
+        <img 
+        src="./images/logo.svg"
+         alt="logo" 
+         width="40" 
+         height="36" >
+         Product
+      </a>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Product</a></li>
+          <li><a href="./pricing.html">Pricing</a></li>
+          <li><a href="./customer.html">Customers</a></li>
+          <li><a href="">Resources</a></li>
+        </ul>
       </nav>
       <ul>
         <li><button type="button">Sign In</button></li>
@@ -27,114 +32,395 @@
 
     <main>
       <!-- HERO SECTION -->
-    <section>
-    <h1>Work at the speed
-      of thought</h1>
-      <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
-      <ul>
-        <li><button type="button">Get started</button></li>
-        <li><button type="button">Watch the Video</button></li>
-      </ul>
-    <img src="./images/hero-img.svg" alt="People are interacting via smartphones and app" width="610" >
-    </section>
+      <section>
+        <h1>Work at the speed of thought</h1>
+        <p>
+          Tools, tutorials, design and innovation experts, all in one place! The
+          most intuitive way to imagine your next user experience.
+        </p>
+        <ul>
+          <li><button type="button">Get started</button></li>
+          <li><button type="button">Watch the Video</button></li>
+        </ul>
+        <img
+          src="./images/hero-img.svg"
+          alt="People are interacting via smartphones and app"
+          width="610"
+        />
+      </section>
 
-   <section>
-   <h2>Product  was Built Specifically for You</h2>
-    <ul>
-      <li>
-      <img src="./images/icon-1.svg" alt="Green clicking icon" width="54px">
-      <h3>First click tests</h3>
-      <p>While most people enjoy casino gambling,</p>
-      </li>
-      <li>
-        <img src="./images/icon-2.svg" alt="Blue survey icon" width="54px">
-        <h3>Design surveys</h3>
-        <p>Sports betting, lottery and bingo playing for the fun</p>
-        </li>
-        <li>
-          <img src="./images/icon-3.svg" alt="Preference purple icon" width="54px">
-          <h3>Preference tests</h3>
-          <p>The Myspace page defines the individual.</p>
-          </li> 
+      <section>
+        <h2>Product was Built Specifically for You</h2>
+        <ul>
           <li>
-            <img src="./images/icon-4.svg" alt="Red testing icon icon" width="54px">
+            <img
+              src="./images/icon-1.svg"
+              alt="Green clicking icon"
+              width="54"
+            />
+            <h3>First click tests</h3>
+            <p>While most people enjoy casino gambling,</p>
+          </li>
+          <li>
+            <img
+              src="./images/icon-2.svg"
+              alt="Blue survey icon"
+              width="54"
+            />
+            <h3>Design surveys</h3>
+            <p>Sports betting, lottery and bingo playing for the fun</p>
+          </li>
+          <li>
+            <img
+              src="./images/icon-3.svg"
+              alt="Preference purple icon"
+              width="54"
+            />
+            <h3>Preference tests</h3>
+            <p>The Myspace page defines the individual.</p>
+          </li>
+          <li>
+            <img
+              src="./images/icon-4.svg"
+              alt="Red testing icon icon"
+              width="54"
+            />
             <h3>Five second tests</h3>
             <p>Personal choices and the overall personality of the person.</p>
-            </li> 
-     </ul>
-     <button type="button">sign up now</button>
-     </section>
+          </li>
+        </ul>
+        <button type="button">sign up now</button>
+      </section>
 
-     <section>
-      <h2>Services</h2>
-      <ul>
-      <li><p>Effortless Validation for</p><h3>Management</h3> 
-      <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
-      <ul>
-        <li><h4>Accessory makers</h4>
-        <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
-        </li>
-       <li><h4>Alterationists</h4>
-        <p>If you are looking for a new way to promote your business that won't cost you more money, </p>
-      </li>
-      </ul>
-  
-      <img src="./images/management-img.svg" alt="Well-managed folders " width="540" >
-      </li>
-     
+      <section>
+        <h2>Services</h2>
+        <ul>
+          <li>
+            <p>Effortless Validation for</p>
+            <h3>Management</h3>
+            <p>
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices and the overall
+              personality of the person.
+            </p>
+            <ul>
+              <li>
+                <h4>Accessory makers</h4>
+                <p>
+                  While most people enjoy casino gambling, sports betting,
+                  lottery and bingo playing for the fun
+                </p>
+              </li>
+              <li>
+                <h4>Alterationists</h4>
+                <p>
+                  If you are looking for a new way to promote your business that
+                  won't cost you more money,
+                </p>
+              </li>
+            </ul>
 
-     
-     <li>
-      <img src="./images/support-img.svg" alt="Search tab on a laptop" width="540" >
-     <p>Easier decision making for</p><h3>Customer Support</h3>
-     <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
-     <ul>
-      <li><img src="./images/yellow.svg" alt="Yellow check icon" width="35.07">
-      <p>Never worry about overpaying for your energy again.</p>
-      </li>
-      <li><img src="./images/red.svg" alt="Red check icon" width="35.07">
-      <p>We will only switch you to energy companies that we trust and will treat you right</p>
-      </li>
-      <li><img src="./images/blue.svg" alt="Blue check icon" width="35.07">
-        <p>We track the markets daily and know where the savings are.</p></li>
-     </ul>
+            <img
+              src="./images/management-img.svg"
+              alt="Well-managed folders "
+              width="540"
+            />
+          </li>
+
+          <li>
+            <img
+              src="./images/support-img.svg"
+              alt="Search tab on a laptop"
+              width="540"
+            />
+            <p>Easier decision making for</p>
+            <h3>Customer Support</h3>
+            <p>
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices and the overall
+              personality of the person.
+            </p>
+            <ul>
+              <li>
+                <img
+                  src="./images/yellow.svg"
+                  alt="Yellow check icon"
+                  width="35"
+                />
+                <p>Never worry about overpaying for your energy again.</p>
+              </li>
+              <li>
+                <img
+                  src="./images/red.svg"
+                  alt="Red check icon"
+                  width="35"
+                />
+                <p>
+                  We will only switch you to energy companies that we trust and
+                  will treat you right
+                </p>
+              </li>
+              <li>
+                <img
+                  src="./images/blue.svg"
+                  alt="Blue check icon"
+                  width="35"
+                />
+                <p>
+                  We track the markets daily and know where the savings are.
+                </p>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <p>Optimisation for</p>
+            <h3>Collaborative</h3>
+            <p>
+              Few would argue that, despite the advancements of feminism over
+              the past three decades, women still face a double standard when it
+              comes to their behavior.
+            </p>
+            <ul>
+              <li>
+                <h4>Accessory makers</h4>
+                <p>
+                  While most people enjoy casino gambling, sports betting,
+                  lottery and bingo playing for the fun
+                </p>
+              </li>
+              <li>
+                <h4>Alterationists</h4>
+                <p>
+                  If you are looking for a new way to promote your business that
+                  won't cost you more money,
+                </p>
+              </li>
+            </ul>
+            <img
+              src="./images/collaboration-img.svg"
+              alt="Some folders "
+              width="540"
+            />
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Quick & Easy Process</h3>
+        <p>
+          Do you require some help for your project: Conception workshop,
+          prototyping, marketing strategy, landing page, Ux/UI?
+        </p>
+        <ul>
+          <li>
+            <img src="./images/avatar1.png" alt="Blonde woman" width="98" />
+            <p>I can take care of your pitch</p>
+          </li>
+          <li>
+            <img src="./images/avatar2.png" alt="Woman in a dark sweater" />
+            <p>I can prototype your app</p>
+          </li>
+          <li>
+            <img src="./images/avatar3.png" alt="Man in a red T-shirt" />
+            <p>I can help marketing strategy</p>
+          </li>
+          <li>
+            <img src="./images/avatar4.png" alt="Man in a striped T-shirt" />
+            <p>I can take care of your pitch</p>
+          </li>
+        </ul>
+        <button type="button">Contact our expert</button>
+      </section>
+
+      <section>
+        <h3>Contents Strategies</h3>
+        <p>
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/content1-min.jpg"
+              alt="People are working on computer"
+              width="350"
+              height="185"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h4>Increasing Prosperity With Positive Thinking</h4>
+          </li>
+          <li>
+            <img 
+            src="./images/content2-min.jpg" 
+            alt="People are discussing business in the building with the city view" 
+            width="350" 
+            height="185" 
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h4>Motivation Is The First Step To Success</h4>
+          </li>
+          <li>
+            <img 
+            src="./images/content3-min.jpg" 
+            alt="Skyscrapers phtographed from below" 
+            width="350" 
+            height="185" 
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h4>Success Steps For Your Personal Or Business</h4>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Price Table</h3>
+        <p>We offer competitive price</p>
+
+        <ul>
+          <li>
+            <h4>Free</h4>
+            <p>Brief price description</p>
+            <ul>
+              <li><span>0$</span>per/month</li>
+              <li>Only 2 Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+
+          <li>
+            <h4>Standard</h4>
+            <p>Brief price description</p>
+            <ul>
+              <li><span>5$</span>per/month</li>
+              <li>5+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+
+          <li>
+            <h4>Premium</h4>
+            <p>Brief price description</p>
+            <ul>
+              <li><span>10$</span>per/month</li>
+              <li>10+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>What Clients Say</h3>
+        <p>Problems trying to resolve the conflict between 
+          the two major realms of Classical physics: Newtonian mechanics </p>
+          <ul>
+            <li>
+              <p>Product helps you see how many 
+                more days you need to work to 
+                reach your financial goal.</p>
+                <img
+                src="./images/client1-min.png"
+                alt="Man in a white jacket"
+                width="50"
+                height="50"
+                />
+                <h4>Wahid Ari</h4>
+                <p>Designer</p>
+            </li>
+            <li>
+              <p>Product helps you see how many 
+                more days you need to work to 
+                reach your financial goal.</p>
+                <img
+                src="./images/client2-min.png"
+                alt="Man in a grey shirt"
+                width="50"
+                height="50"
+                />
+                <h4>Wahid Ari</h4>
+                <p>Designer</p>
+            </li>
+            <li>
+              <p>Product helps you see how many 
+                more days you need to work to 
+                reach your financial goal.</p>
+                <img
+                src="./images/client3-min.png"
+                alt="Man in a red shirt"
+                width="50"
+                height="50"
+                />
+                <h4>Wahid Ari</h4>
+                <p>Designer</p>
+            </li>
+          </ul>
+        </section>
+          <p>Join 100 Compannies who boost their business with Product</p>
+          <button type="button">Get This</button>
+
+    </main>
+
+    <footer>
+      <a href="./index.html">
+        <img 
+        src="./images/logo.svg"
+         alt="logo" 
+         width="40" 
+         height="36" >
+         Product
+      </a>
+      <ul>
+        <li><a href="instagram.com">
+        <img 
+        src="./images/insta1.svg"
+        alt="icon of instagram"
+        width="40"
+        height="40" >
+      </a>
     </li>
-
-    <li>
-      <p>Optimisation for</p><h3>Collaborative</h3>
-      <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. </p>
-      <ul>
-        <li><h4>Accessory makers</h4>
-        <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p></li>
-        <li><h4>Alterationists</h4>
-        <p>If you are looking for a new way to promote your business that won't cost you more money, </p></li>
-      </ul>
-      <img src="./images/collaboration-img.svg" alt="Some folders " width="540" >
-
-    </li>
+    <li><a href="Facebook.com">
+      <img 
+      src="./images/fb2.svg"
+      alt="icon of Facebook"
+      width="40"
+      height="40" >
+    </a>
+  </li>
+  <li><a href="twitter.com">
+    <img 
+    src="./images/twitter3.svg"
+    alt="icon of twitter"
+    width="40"
+    height="40" >
+  </a>
+</li>
     </ul>
-     </section>
-
-     <section>
-      <h3>Quick & Easy Process</h3>
-      <p>Do you require some help for your project: Conception workshop,
-        prototyping, marketing strategy, landing page, Ux/UI?</p>
+      <h4>Resource</h4>
       <ul>
-        <li><img src="./images/avatar1.png" alt="Blonde woman" width="98">
-        <p>I can take care of your pitch</p></li>
-       <li>
-        <img src="" alt="">
-        <p></p>
-       </li>
-       <li>
-        <img src="" alt="">
-        <p></p>
-       </li>
+        <li>About Us</li>
+        <li>Blog</li>
+        <li>Contact</li>
+        <li>FAQ</li>
       </ul>
-     </section>
-
-
-
-  </main>
+      <h4>Legal Stuff</h4>
+      <ul>
+        <li>Disclaimer</li>
+        <li>Financing</li>
+        <li>Privacy Policy</li>
+      </ul>
+      <p>knowing you're always on the best energy deal. 
+      </p>
+      <input type="text" value="Enter your phone number">
+      <button type="button">Sign up Now</button>
+      <p>Made With Love By Figmaland All Right Reserved 
+      </p>
+    </footer>
   </body>
 </html>
