markup of second page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <li>
             <img
               src="./images/icon-4.svg"
-              alt="Red testing icon icon"
+              alt="Red testing icon"
               width="54"
             />
             <h3>Five second tests</h3>
