--- a/index.html
+++ b/index.html
@@ -70,42 +70,18 @@
         <h2 class="product-title">Product was Built Specifically for You</h2>
         <ul class="product-list">
           <li class="product-item">
-            <img
-              src="./images/icon-1.svg"
-              alt="Green clicking icon"
-              width="54"
-              class="product-img"
-            />
             <h3 class="product-subtile">First click tests</h3>
             <p class="product-descr">While most people enjoy casino gambling,</p>
           </li>
           <li class="product-item">
-            <img
-              src="./images/icon-2.svg"
-              alt="Blue survey icon"
-              width="54"
-              class="product-img"
-            />
             <h3 class="product-subtile">Design surveys</h3>
             <p class="product-descr">Sports betting, lottery and bingo playing for the fun</p>
           </li>
           <li class="product-item">
-            <img
-              src="./images/icon-3.svg"
-              alt="Preference purple icon"
-              width="54"
-              class="product-img"
-            />
             <h3 class="product-subtile">Preference tests</h3>
             <p class="product-descr">The Myspace page defines the individual.</p>
           </li>
           <li class="product-item">
-            <img
-              src="./images/icon-4.svg"
-              alt="Red testing icon"
-              width="54"
-              class="product-img"
-            />
             <h3 class="product-subtile">Five second tests</h3>
             <p class="product-descr">Personal choices and the overall personality of the person.</p>
           </li>
@@ -425,8 +401,13 @@
 
     </main>
 
-    <footer>
-      <a href="./index.html">
+
+
+
+    <footer class="footer">
+      <div class="container footer-container">
+      <div class="footer-part-one">
+      <a href="./index.html" class="logo">
         <img 
         src="./images/logo.svg"
          alt="logo" 
@@ -434,51 +415,71 @@
          height="36" >
          Product
       </a>
-      <ul>
-        <li><a href="instagram.com">
-        <img 
-        src="./images/insta1.svg"
-        alt="icon of instagram"
-        width="40"
-        height="40" >
+      <ul class="footer-socials-list">
+        <li class="footer-soclist-item">
+          <a aria-label="instagram-link"target="_blank" href="" class="footer-soclist-link">
+          <svg class="icons-socials-svg" width="24" height="24">
+        <use href="./images/iconsnew.svg#icon-instagram"></use>
+        </svg>
       </a>
     </li>
-    <li><a href="Facebook.com">
-      <img 
-      src="./images/fb2.svg"
-      alt="icon of Facebook"
-      width="40"
-      height="40" >
+    <li class="footer-soclist-item">
+      <a aria-label="facebook-link" target="_blank" href="" class="footer-soclist-link">
+      <svg class="icons-socials-svg" width="24" height="24">
+        <use href="./images/iconsnew.svg#icon-facebook"></use>
+        </svg>
     </a>
   </li>
-  <li><a href="twitter.com">
-    <img 
-    src="./images/twitter3.svg"
-    alt="icon of twitter"
-    width="40"
-    height="40" >
+  <li class="footer-soclist-item">
+    <a aria-label="twitter-link" target="_blank" href="" class="footer-soclist-link">
+    <svg class="icons-socials-svg" width="24" height="24">
+      <use href="./images/iconsnew.svg#icon-twitter"></use>
+      </svg>
   </a>
 </li>
     </ul>
-      <h4>Resource</h4>
+    </div>
+
+
+    <div class="footer-part-two">
+      <h4 class="subtitle-footer">resource</h4>
       <ul>
         <li>About Us</li>
         <li>Blog</li>
         <li>Contact</li>
         <li>FAQ</li>
       </ul>
-      <h4>Legal Stuff</h4>
+    </div>
+    <div class="legal-stuff">
+      <h4 class="subtitle-footer">Legal Stuff</h4>
       <ul>
         <li>Disclaimer</li>
         <li>Financing</li>
         <li>Privacy Policy</li>
       </ul>
-      <p>knowing you're always on the best energy deal. 
+    </div>
+
+
+      <div class="form-footer-container">
+      <p class="text-footer-form">knowing you're always on the best energy deal. 
       </p>
-      <input type="text" value="Enter your phone number">
-      <button type="button">Sign up Now</button>
-      <p>Made With Love By Figmaland All Right Reserved 
-      </p>
+      <form class="footer-form">
+      <label class="footer-label" for="usertel">
+      <input class="footer-input" 
+      id="usertel" 
+      type="tel" 
+      placeholder="Enter your phone number"
+      />
+      <svg class="footer-input-icon" width="18" height="28">
+        <use href="./images/iconsnew.svg#icon-mobile-screen"></use>
+      </svg></label>
+      <button class="footer-form-btn" type="submit">Sign up Now</button>
+    </form>
+  </div>
+    
+    </div>
+    <p>Made With Love By Figmaland All Right Reserved 
+    </p>
     </footer>
   </body>
 </html>
