--- a/customer.html
+++ b/customer.html
@@ -4,39 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business promotion - Customer</title>
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+  />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700;800&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="./css/styles.css" >
 </head>
 <body>
-        <header>
-          <a href="./index.html">
-            <img 
-            src="./images/logo.svg"
-             alt="logo" 
-             width="40" 
-             height="36" >
-             Product
-          </a>
-          <nav>
-            <ul>
-              <li><a href="./index.html">Product</a></li>
-              <li><a href="./pricing.html">Pricing</a></li>
-              <li><a href="./customer.html">Customers</a></li>
-              <li><a href="">Resources</a></li>
+        <header class="header">
+          <div class="container header-container">
+            <a href="./index.html" class="logo">
+              <img 
+              src="./images/logo.svg"
+               alt="logo" 
+               width="40" 
+               height="36" >
+               Product
+            </a>
+            <nav class="header-nav">
+              <ul class="header-nav-list">
+                <li class="header-nav-item"><a class="header-nav-link " href="./index.html">Product</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="./pricing.html">Pricing</a></li>
+                <li class="header-nav-item"><a class="header-nav-link current" href="./customer.html">Customers</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="">Resources</a></li>
+              </ul>
+            </nav>
+            <ul class="header-btn-list">
+              <li class="header-btn-item"><button class="header-btn" type="button">Sign In</button></li>
+              <li class="header-btn-item"><button class="header-btn" type="button">Sign Up</button></li>
             </ul>
-          </nav>
-          <ul>
-            <li><button type="button">Sign In</button></li>
-            <li><button type="button">Sign Up</button></li>
-          </ul>
+          </div>
         </header>
+
+
+
         <main>
-            <section>
-            <h1>Our Clients</h1>
-            <ul>
-                <li><a href="https://www.airbnb.com"><img src="./images/AirbnbLogo.svg" alt="Logo airbnb" width="159" height="50"></a></li>
-                <li><a href="https://www.google.com"><img src="./images/GoogleLogo.svg" alt="Logo google" width="146" height="50"></a></li>
-                <li><a href="https://www.microsoft.com"><img src="./images/MicrosoftLogo.svg" alt="Logo Microsoft" width="213" height="44"></a></li>
-                <li><a href="https://www.fedex.com"><img src="./images/FedExLogo.svg" alt="Logo FedEx" width="140" height="42"></a></li>
+            <section class="clients">
+            <div  class="container">
+            <h1 class="clients-title">Our Clients</h1>
+            <ul class="clients-list">
+                <li class="clients-item">
+                  <a class="clients-link" href="https://www.airbnb.com">
+                    <img src="./images/AirbnbLogo.svg" 
+                    alt="Logo airbnb" 
+                    width="159" 
+                    height="50"
+                    />
+                  </a>
+                </li>
+                <li class="clients-item">
+                  <a class="clients-link" href="https://www.google.com">
+                    <img src="./images/GoogleLogo.svg" 
+                    alt="Logo google" 
+                    width="146" 
+                    height="50"
+                    />
+                  </a>
+                </li>
+                <li class="clients-item">
+                  <a class="clients-link" href="https://www.microsoft.com">
+                    <img src="./images/MicrosoftLogo.svg" 
+                    alt="Logo Microsoft" 
+                    width="213" 
+                    height="44"
+                    />
+                  </a>
+                </li>
+                <li class="clients-item">
+                  <a class="clients-link" href="https://www.fedex.com">
+                    <img src="./images/FedExLogo.svg" 
+                    alt="Logo FedEx"
+                    width="140" 
+                    height="42"
+                    />
+                  </a>
+                </li>
             </ul>
+          </div>
         </section>
 
      <section>
